fix annoying overlap

--- a/src/components/Comment/styles.module.scss
+++ b/src/components/Comment/styles.module.scss
@@ -15,7 +15,7 @@
     position: absolute;
     right: -10px;
     top: -2px;
-    width: 120px;
+    width: 40px;
     height: 100%;
     border-color: var(--ifm-color-primary);
     font-size: 18px;
